--- a/index.html
+++ b/index.html
@@ -1,20 +1,76 @@
 <!doctype html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>My Portfolio</title>
+    <title>김영훈 포트폴리오</title>
     <style>
       body {
-        font-family: Arial;
-        padding: 40px;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
       }
-      h1 {
-        color: #333;
+      header {
+        background: #111;
+        color: #fff;
+        padding: 50px 20px;
+        text-align: center;
+      }
+      section {
+        padding: 40px 20px;
+        max-width: 900px;
+        margin: auto;
+      }
+      h2 {
+        border-bottom: 2px solid #ddd;
+        padding-bottom: 10px;
+      }
+      .project {
+        margin-bottom: 30px;
+      }
+      footer {
+        background: #f1f1f1;
+        text-align: center;
+        padding: 20px;
+        margin-top: 40px;
       }
     </style>
   </head>
   <body>
-    <h1>안녕하세요! 김영훈의 포트폴리오입니다.</h1>
-    <p>GitHub Pages로 만든 첫 사이트입니다.</p>
+    <header>
+      <h1>김영훈 포트폴리오</h1>
+      <p>Frontend Developer | Web Developer</p>
+    </header>
+
+    <section>
+      <h2>소개</h2>
+      <p>안녕하세요! 꾸준히 성장하고 싶은 개발자 김영훈입니다.</p>
+    </section>
+
+    <section>
+      <h2>기술 스택</h2>
+      <ul>
+        <li>HTML / CSS / JavaScript</li>
+        <li>React</li>
+        <li>Git / GitHub</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>프로젝트</h2>
+
+      <div class="project">
+        <h3>프로젝트 1</h3>
+        <p>프로젝트 설명을 여기에 작성하세요.</p>
+        <a href="#">GitHub 링크</a>
+      </div>
+
+      <div class="project">
+        <h3>프로젝트 2</h3>
+        <p>프로젝트 설명을 여기에 작성하세요.</p>
+        <a href="#">GitHub 링크</a>
+      </div>
+    </section>
+
+    <footer>© 2025 김영훈. All rights reserved.</footer>
   </body>
 </html>
